Update swagger OpenAPI documentation.
