# docs/swagger.yaml
@@ -340,9 +340,9 @@ paths:
       - application/did+json
       responses:
         "200":
-          description: Other parameters returns Resource Dereferencing
+          description: versionId, versionTime, transformKey returns Full DID Document
           schema:
-            $ref: '#/definitions/types.ResourceDereferencing'
+            $ref: '#/definitions/types.DidResolution'
         "400":
           description: Bad Request
           schema:
